# EnsarRoot

./: .gitignore  CMakeLists.txt  CTestConfig.cmake  Dart.sh  EnsarRoot_test.cmake  LICENSE.md  README.md
calo/: CMakeLists.txt
calo/base/: CMakeLists.txt
calo/cal/: CMakeLists.txt  R3BCalo.cxx  R3BCalo.h  R3BCaloCalLinkDef.h  R3BCaloHitFinder.cxx
calo/cal/unpack/: R3BCaloCalibParFinder.cxx  R3BCaloCrystalAna.cxx  R3BCaloRawAna.cxx  R3BCaloRawHit.cxx  R3BCaloRawHit.h  R3BCaloUnpack.cxx  R3BCaloUnpack.h
calo/cal/unpacker/: CMakeLists.txt  OptionWrapper.h  OptionWrappers.cxx  caloUnpack.cxx  fixROOT.c  fixROOT.cxx
calo/commondb/: CMakeLists.txt
calo/data/: CMakeLists.txt  R3BDataLinkDef.h
calo/db/: CMakeLists.txt
calo/macros/califa/: checkResults.C
calo/macros/califa/auto/: checkResults_batch.C
calo/macros/califa/s438/: CaloHitAna.h  Draw.h  MergedCaloHitAna.h  calPulser_part1.C  calibrate.C  petal_viewer.C  plot.C  plotAll.C
calo/macros/db/: index
calo/macros/unpack/: draw.C
calo/passive/: CMakeLists.txt  R3BCaloPassiveLinkDef.h
plists/: CMakeLists.txt  EnsarDecaysBuilder.cxx  EnsarDecaysBuilder.h  EnsarParticlesBuilder.cxx  EnsarParticlesBuilder.h  EnsarPhysicsList.cxx  EnsarPhysicsList.h  EnsarPhysicsListMessenger.cxx  EnsarPhysicsListMessenger.h  EnsarRunConfiguration.cxx  EnsarRunConfiguration.h  PlistLinkDef.h
sofia/: CMakeLists.txt
sofia/Mbs/: CMakeLists.txt  MbsLinkDef.h  R3BMbsFile.cxx  R3BMbsFile.h
sofia/base/: CMakeLists.txt
sofia/data/: CMakeLists.txt  R3BDataLinkDef.h
sofia/data/landData/: R3BLandPoint.cxx
sofia/data/music1Data/: R3BMusic1Raw.cxx  R3BMusic1Raw.h
sofia/data/music2Data/: R3BMusic2Raw.cxx  R3BMusic2Raw.h
sofia/data/musicData/: R3BMusicRaw.cxx  R3BMusicRaw.h
sofia/data/mwpc1Data/: R3BMWPC1Raw.cxx  R3BMWPC1Raw.h  R3BMWPCPads.cxx  R3BMWPCPads.h  R3BMWpcHit.cxx  R3BMWpcHit.h  R3BMWpcPoint.cxx  R3BMWpcPoint.h
sofia/data/mwpc2Data/: R3BMWPC2Raw.cxx  R3BMWPC2Raw.h  R3BMWpc2Hit.cxx  R3BMWpc2Hit.h  R3BMWpc2Point.cxx  R3BMWpc2Point.h
sofia/data/startFFData/: R3BStartFFRaw.cxx  R3BStartFFRaw.h
sofia/data/stofData/: R3BToFWRaw.cxx  R3BToFWRaw.h  R3BTofPoint.h
sofia/data/tpcData/: R3BTPCRaw.cxx  R3BTPCRaw.h
sofia/data/twinmusicData/: R3BTwinMusicPoint.cxx  R3BTwinMusicPoint.h  R3BTwinMusicRaw.cxx  R3BTwinMusicRaw.h
sofia/detectors/: CMakeLists.txt
sofia/detectors/land/: CMakeLists.txt  R3BLandData.cxx  R3BNeutronTracker2D.cxx  R3BNeutronTracker2D.h
sofia/detectors/mwpc_1/: CMakeLists.txt  R3BGeoMWpc.cxx  R3BGeoMWpcPar.h  R3BMWpc.cxx  R3BMWpc.h  mwpcLinkDef.h
sofia/detectors/mwpc_2/: CMakeLists.txt  R3BGeoMWpc.h  R3BGeoMWpcPar.cxx  R3BMWpc2.cxx  R3BMWpc2.h  mwpc2LinkDef.h
sofia/detectors/stof/: CMakeLists.txt  R3BGeoTof.cxx  R3BGeoTofPar.cxx  R3BTof.cxx  R3BTof.h  TofLinkDef.h
sofia/detectors/twinmusic/: CMakeLists.txt  R3BGeoTwinMusic.cxx  R3BGeoTwinMusic.h  R3BGeoTwinMusicPar.cxx  R3BGeoTwinMusicPar.h  R3BTwinMusic.cxx  R3BTwinMusic.h  TwinMusicLinkDef.h
sofia/evtvis/: CMakeLists.txt  R3BEventDisplayLinkDef.h  R3BMCTracks.cxx
sofia/experimentdata/: CMakeLists.txt  TRootEvent.h  TRootEventLinkDef.h
sofia/field/: CMakeLists.txt  FieldLinkDef.h  R3BFieldMap.cxx  R3BGladFieldMap.cxx
sofia/gconfig/: g4R3bConfig.C  g4SofiaConfig.C  g4r3bconfig.in  g4sofiaconfig.in
sofia/input/ANDES/LAND/: Map_LAND.txt  (+8 more)
sofia/macros/: CMakeLists.txt
sofia/macros/sofia/: CMakeLists.txt
sofia/macros/unpack/: unpackall.C  unpacksim.C
sofia/mcstack/: CMakeLists.txt  MCStackLinkDef.h
sofia/passive/: CMakeLists.txt  PassiveLinkDef.h  R3BMagnet.cxx  R3BMagnet.h  R3Btubehelium.cxx  R3Btubehelium.h  R3Btubevacuum.cxx  R3Btubevacuum.h
sofia/plists/: CMakeLists.txt  G4StepLimiterBuilder.cxx  R3BDecaysBuilder.cxx  R3BPhysicsList.cxx
template_scintillator/: CMakeLists.txt  EnsarScintillatorLinkDef.h
template_scintillator/digitization/: EnsarScintillatorDigi.cxx  EnsarScintillatorDigi.h  EnsarScintillatorDigiPar.cxx  EnsarScintillatorDigiPar.h  EnsarScintillatorDigitizer.cxx  EnsarScintillatorDigitizer.h  EnsarScintillatorPoint.cxx  EnsarScintillatorPoint.h
template_scintillator/geometry/: EnsarScintillator.cxx  EnsarScintillator.h  EnsarScintillatorContFact.cxx  EnsarScintillatorContFact.h  EnsarScintillatorGeoPar.cxx  EnsarScintillatorGeoPar.h
template_scintillator/macros/: eventDisplay.C  runsim.C  simall.C
template_silicon/: CMakeLists.txt  EnsarSiliconLinkDef.h
template_silicon/digitization/: EnsarSiliconDigi.cxx  EnsarSiliconDigi.h  EnsarSiliconDigiPar.cxx  EnsarSiliconDigiPar.h  EnsarSiliconDigitizer.cxx  EnsarSiliconDigitizer.h  EnsarSiliconPoint.cxx  EnsarSiliconPoint.h
template_silicon/geometry/: EnsarSilicon.cxx  EnsarSilicon.h  EnsarSiliconContFact.cxx  EnsarSiliconContFact.h  EnsarSiliconGeoPar.cxx  EnsarSiliconGeoPar.h
template_silicon/macros/: eventDisplay.C  runsim.C  simall.C
tragaldabas/: CMakeLists.txt
tragaldabas/data/: CMakeLists.txt  TraDataLinkDef.h  TraDetectorList.h  TraRPCHit.cxx  TraRPCHit.h  TraRPCPoint.cxx  TraRPCPoint.h  TraRPCSaeta.cxx  TraRPCSaeta.h
tragaldabas/geometry/: bloquePb_test.geo.root  laminaFe10cm_test.geo.root  laminaFe1cm_test.geo.root  laminaFe20cm_test.geo.root  laminaFe5cm_test.geo.root  laminaFealfa_test.geo.root  laminaPb10cm_test.geo.root  laminaPb1cm_test.geo.root  laminaPb20cm_test.geo.root  laminaPb5cm_test.geo.root  laminaPb_test.geo.root  laminaPbalpha_test.geo.root  laminaT_test.geo.root  laminaU10cm_test.geo.root  laminaU1cm_test.geo.root  laminaU20cm_test.geo.root  laminaU5cm_test.geo.root  laminaU_test.geo.root  laminaUalfa_test.geo.root  lamina_test.geo.root  media_ensar.geo  tragaldabas_oficial.geo.root  tragaldabas_test.geo.root  tragaldabas_v0.geo.root
tragaldabas/macros/: checkResults.C  compiled.C  evtvis.C  muonsAna.C  results.C  tragall.C  tragpar.root  tragsim.C  tragsim.root
tragaldabas/macros/geo/: create_tragaldabas_geo.C  lamina.C  lamina2.C  laminaFe.C  laminaPb.C  laminaU.C  rootlogon.C  tragaldabas.C
tragaldabas/rpc/: CMakeLists.txt  RPCLinkDef.h  TraRPC.cxx  TraRPC.h  TraRPCHit2Saeta.cxx  TraRPCHit2Saeta.h
(+342 files in other folders)
